--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html5>
 <html>
-    <head>
+<header>Amitha Segu -Family Vacation </header>
+<head>
         <title>FAMILY VACATION</title>
+        <link href="/css/style.css" type="text/css" rel="stylesheet">
     </head>
 </html>
 <body>
