--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html5>
 <html>
-<header>Amitha Segu -Family Vacation </header>
-<head>
+<header>
         <title>FAMILY VACATION</title>
-        <link href="/css/style.css" type="text/css" rel="stylesheet">
-    </head>
+        <link href="css/style.css" type="text/css" rel="stylesheet">
+</header>
 </html>
 <body>
-    <h1>FUN FAMILY VACATION</h1>
-    <p>By: Amitha Segu</p>
-    <div>
-        <ul>
-            <li><a href="#california">CALIFORNIA</a></li>
-            <li><a href="#arizona">ARIZONA</a></li>
-        </ul>
+    <div  class="oceanfloor">
+      <h1 id="family">FAMILY VACATION</h1>
+      <p>By: Amitha Segu</p>     
+      <ul>
+        <li><a href="#california" class="designer">CALIFORNIA</a></li>
+        <li><a href="#arizona" class="designer">ARIZONA</a></li>
+      </ul>
     </div>
     <div id="california">
-      <h3 style="color:blueviolet">CALIFORNIA</h3>
+      <h3 id="header-text">CALIFORNIA</h3>
       <p>California has wornderful places to visit. It has beautiful Pacific ocean to the west, with amazing ocean views and beaches.
         Places of interest.
         <ul>
@@ -26,22 +25,22 @@
         </ul>
       </p>
       <h4><em>San Fransisco Bay Area</em></h4>
-      <p style="font-family:verdana; color:green">Bay Area is a beautiful place. It has amazing view of pacific ocean, live music on the streets,fun activities for the family.
+      <p>Bay Area is a beautiful place. It has amazing view of pacific ocean, live music on the streets,fun activities for the family.
           It has unique tram system which makes the communiting with the bay area very easy
       </p>
       <a href="https://en.wikipedia.org/wiki/San_Francisco_Bay_Area">Learn More:Bay Area</a>
       <h4><em>Golden Gate Bridge</em></h4>
-      <p style="font-family:verdana; color:green">The drive to gloden gate bridge was fun. We rented bikes and had fun time biking on the golden gate bridge. My little one enjoyed a lot</p>
+      <p>The drive to gloden gate bridge was fun. We rented bikes and had fun time biking on the golden gate bridge. My little one enjoyed a lot</p>
       <a href="https://en.wikipedia.org/wiki/Golden_Gate_Bridge">Learn more:Golden Gate Bridge</a>
-      <img src="./images/golden_gate_bridge.jpg" width="100" height="100">
+      <!--<img src="./images/golden_gate_bridge.jpg" width="100" height="100"> -->
       <h4><em>Los Angeles</em></h4>
-      <p style="font-family:verdana;color:green">Los Angeles is surrounded by beautiful ocean on one side and wonderful mountains on the other.The walk on the holloywood street was very nice.
+      <p>Los Angeles is surrounded by beautiful ocean on one side and wonderful mountains on the other.The walk on the holloywood street was very nice.
           My kid spotted many celebrities,presidnets,movie stars and many more stars. He enjoyed the street acts a lot.
       </p>
       <a href="https://en.wikipedia.org/wiki/Los_Angeles">Learn more:Los Angeles</a>
     </div>
     <div id="arizona">
-        <h3 style="color:blueviolet">ARIZONA</h3>
+        <h3 id="header-text">ARIZONA</h3>
     </div>
     
     
