Added another part ARIZONA and related style data in stylesheet

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <li>Los Angeles</li>
         </ul>
       </p>
-      <h4><em>San Fransisco Bay Area</em></h4>
+      <h4>San Fransisco Bay Area</h4>
       <p>Bay Area is a beautiful place. It has amazing view of pacific ocean, live music on the streets,fun activities for the family.
           It has unique tram system which makes the communiting with the bay area very easy
       </p>
       <a href="https://en.wikipedia.org/wiki/San_Francisco_Bay_Area">Learn More:Bay Area</a>
-      <h4><em>Golden Gate Bridge</em></h4>
+      <h4>Golden Gate Bridge</h4>
       <p>The drive to gloden gate bridge was fun. We rented bikes and had fun time biking on the golden gate bridge. My little one enjoyed a lot</p>
       <a href="https://en.wikipedia.org/wiki/Golden_Gate_Bridge">Learn more:Golden Gate Bridge</a>
       <!--<img src="./images/golden_gate_bridge.jpg" width="100" height="100"> -->
-      <h4><em>Los Angeles</em></h4>
+      <h4>Los Angeles</h4>
       <p>Los Angeles is surrounded by beautiful ocean on one side and wonderful mountains on the other.The walk on the holloywood street was very nice.
           My kid spotted many celebrities,presidnets,movie stars and many more stars. He enjoyed the street acts a lot.
       </p>
@@ -41,8 +41,24 @@
     </div>
     <div id="arizona">
         <h3 id="header-text">ARIZONA</h3>
+        <p>We visited Pheonix and Grand Canyon in Arizona. We also meet family after a very long time. Kids got to know each other and had lots of fun together. </p>
+        <ul>
+            <li>South Rim</li>
+            <li>Antelope Canyon</li>
+            <li>Horseshoe Bend</li>
+            <li>Petrified Forest</li>
+        </ul>
+        <h4> South Rim</h4>
+        <p> Amazing views of rock formation,the trail closer canyon was amazing. Unfortunaltely due to a lot of heat we only got a glimse of colorado river.</p>
+
+        <h4>Antelope Canyon</h4>
+        <p> We have no words to describe the lower antelope canyon. I can only think of word "Mesmarizing". The beautiful carvings made by wind and water erossion is wonderful.Also during dawn and dusk the way the light flows to the lower canyons makes it even more beautiful</p>
+
+        <h4>Horseshoe Bend</h4>
+        <p>The name say how the colorado river will look like between the canyons. Its one of way to know how the colorado river has carved the canyons</p>
+
+        <h4>Perified Forest</h4>
+        <p> The entire place has trees which are getting converted to rocks after many many years.</p>
     </div>
     
-    
-
 </body>
