addes images and also footer to html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html5>
 <html>
-<header>
-        <title>FAMILY VACATION</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet">
-</header>
+<article>
+  <header>
+     <title>FAMILY VACATION</title>
+     <link href="css/style.css" type="text/css" rel="stylesheet">
+  </header>
+</article>
 </html>
 <body>
     <div  class="oceanfloor">
       <h1 id="family">FAMILY VACATION</h1>
-      <p>By: Amitha Segu</p>     
+      <!--<p>By: Amitha Segu</p>     -->
       <ul>
         <li><a href="#california" class="designer">CALIFORNIA</a></li>
         <li><a href="#arizona" class="designer">ARIZONA</a></li>
@@ -32,7 +34,7 @@
       <h4>Golden Gate Bridge</h4>
       <p>The drive to gloden gate bridge was fun. We rented bikes and had fun time biking on the golden gate bridge. My little one enjoyed a lot</p>
       <a href="https://en.wikipedia.org/wiki/Golden_Gate_Bridge">Learn more:Golden Gate Bridge</a>
-      <!--<img src="./images/golden_gate_bridge.jpg" width="100" height="100"> -->
+      <img src="./images/golden_gate_bridge.jpg" width="100" height="100">
       <h4>Los Angeles</h4>
       <p>Los Angeles is surrounded by beautiful ocean on one side and wonderful mountains on the other.The walk on the holloywood street was very nice.
           My kid spotted many celebrities,presidnets,movie stars and many more stars. He enjoyed the street acts a lot.
@@ -59,6 +61,10 @@
 
         <h4>Perified Forest</h4>
         <p> The entire place has trees which are getting converted to rocks after many many years.</p>
+        <img src="./images/petrified_forest.jpg"  width="250" height="100" >
     </div>
-    
+    <footer class="oceanfloor">
+        <p>Designed:Amitha</p>
+        
+    </footer>    
 </body>
