Added design for footer in css with margins

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p> The entire place has trees which are getting converted to rocks after many many years.</p>
         <img src="./images/petrified_forest.jpg"  width="250" height="100" >
     </div>
-    <footer class="oceanfloor">
+    <footer class="oceanfloor" id="design_footer">
         <p>Designed:Amitha</p>
         
     </footer>    
